feat(java): Optimize buffer handling (#1065)
Use collections of individual buffers to avoid copying data when
returning a subset or concatenation of data at each stage. Previously
each small part of the stream was concatenated into a new, larger array
many times before the final byte array was formed, and each varint
encoding involved an array copy.

~35% faster in my tests

Before:
Command being timed: "java -Xmx96G -Xms48G
-Dcom.google.protobuf.use_unsafe_pre22_gencode
--enable-native-access=ALL-UNNAMED -jar mlt-cli/build/libs/encode.jar
--pmtiles ../../../../Downloads/planet-20260112.pmtiles --mlt
planet-20260112.mlt.gzip.max10.pmtiles --outlines ALL --colmap-delim
[]name/[:_]/ --sort-ids --coerce-mismatch --maxzoom 10 --parallel
--verbose debug"
	User time (seconds): 799.56
	System time (seconds): 1835.72
	Percent of CPU this job got: 771%
	Elapsed (wall clock) time (h:mm:ss or m:ss): 5:41.48

After:
Command being timed: "java -Xmx96G -Xms48G
-Dcom.google.protobuf.use_unsafe_pre22_gencode
--enable-native-access=ALL-UNNAMED -jar mlt-cli/build/libs/encode.jar
--pmtiles ../../../../Downloads/planet-20260112.pmtiles --mlt
planet-20260112.mlt.gzip.max10.pmtiles --outlines ALL --colmap-delim
[]name/[:_]/ --sort-ids --coerce-mismatch --maxzoom 10 --parallel
--verbose debug"
	User time (seconds): 652.14
	System time (seconds): 1106.63
	Percent of CPU this job got: 808%
	Elapsed (wall clock) time (h:mm:ss or m:ss): 3:37.64